--- a/public/order.html
+++ b/public/order.html
@@ -28,7 +28,7 @@
                     </button>
                 </div>
 
-                <div class="relative flex flex-col lg:flex-row space-y-4 items-center lg:items-start justify-between mt-6 lg:space-x-16">
+                <div class="relative flex flex-col lg:flex-row space-y-4 lg:space-y-0 items-center lg:items-start justify-between mt-6 lg:space-x-16">
 
                     <!-- Якщо користувач не зареєстрований -->
                     <form action="" class="space-y-6">
