--- a/public/add-request.html
+++ b/public/add-request.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="fixed top-0 left-0 w-full h-full py-10 px-4 bg-red-200 overflow-y-auto">
+    <div class="fixed top-0 left-0 w-full h-full py-10 px-4 bg-white overflow-y-auto">
 
         <div class="w-full lg:w-[560px] mx-auto rounded-[10px] h-auto bg-white overflow-hidden">
 
