--- a/public/add-car.html
+++ b/public/add-car.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="fixed top-0 left-0 w-full h-full py-10 px-4 bg-white overflow-y-auto">
+    <div class="fixed top-0 left-0 w-full h-full py-10 px-4 bg-white bg-opacity-70 overflow-y-auto">
 
-        <div class="w-full lg:w-[1050px] mx-auto rounded-[10px] h-auto bg-white overflow-hidden">
+        <div class="w-full lg:w-[1050px] mx-auto rounded-[10px] h-auto bg-white overflow-hidden ">
 
             <div class="h-[67px] bg-blue-800 px-[30px] flex justify-between items-center text-white overflow-y-auto">
                 <h3 class="text-base font-semibold">Додати авто</h3>
