error input added

--- a/public/login.html
+++ b/public/login.html
@@ -35,6 +35,14 @@
                     <input type="password" placeholder="********" class="login__input">
                 </div>
                 <div class="mt-4">
+                    <p class="font-medium">Номер телефону</p>
+                    <input type="text" placeholder="+380xxxxxxxxx" class="login__input__error">
+                </div>
+                <div class="mt-4">
+                    <p class="font-medium">Пароль</p>
+                    <input type="password" placeholder="********" class="login__input__error">
+                </div>
+                <div class="mt-4">
                     <label for="remeberme" class="flex items-center cursor-pointer select-none hover:bg-yellow-400 hover:bg-opacity-30 p-1 "><input type="checkbox" name="remeberme" id="remeberme" class="w-4 h-4 mr-2"> Запам'ятати мене</label>
                 </div>
                 <button class="w-full h-10 mt-10 bg-yellow-400 font-semibold hover:bg-yellow-300 hover:-translate-y-1 active:translate-y-0 duration-200">Увійти</button>
